# EVD-ARAS-Project

./: .gitignore  LegoSequenceFile.lsf  README.md  main.py
Lego Seq File Maker/: LegoSeqFileMaker.py  LegoSequenceFile.lsf
cpparas/: .cpparas-preferences  CMakeLists.txt  Doxyfile.in  README.md
cpparas/evdk_operators/: operators.c  operators.h  operators_basic.c  operators_basic.h  operators_float.c  operators_float.h  operators_fonts.c  operators_fonts.h  operators_hsv.c  operators_hsv.h  operators_int16.c  operators_int16.h  operators_rgb565.c  operators_rgb565.h  operators_rgb888.c  operators_rgb888.h  operators_uint16.c  operators_uint16.h
cpparas/include/: Camera.hpp  ColorClassifier.hpp  ControlUI.hpp  CoordinateMatrix.hpp  HandDetection.hpp  ImageArea.hpp  ImageLoader.hpp  ImageUtils.hpp  LSFParser.hpp  Locator.hpp  MarkerDetector.hpp  MyArea.hpp  Projection.hpp  ProjectorUI.hpp  RegionExtractor.hpp  StateMachine.hpp  StudChecker.hpp  test.hpp
cpparas/include/debug/: Debug.hpp  DebugUI.hpp
cpparas/include/types/: Brick.hpp  Calibration.hpp  Color.hpp  Point.hpp  Point2D.hpp  Rect.hpp
cpparas/include/util/: Debug.hpp  GenericStateMachine.hpp  ImageArea.hpp  ImageUtils.hpp  Preferences.hpp  StateMachineWidget.hpp  StateStep.hpp
cpparas/src/: Camera.cpp  ColorClassifier.cpp  ControlUI.cpp  CoordinateMatrix.cpp  HandDetection.cpp  ImageArea.cpp  ImageLoader.cpp  ImageUtils.cpp  LSFParser.cpp  Locator.cpp  MarkerDetector.cpp  MyArea.cpp  Projection.cpp  ProjectorUI.cpp  RegionExtractor.cpp  StateMachine.cpp  StudChecker.cpp  main.cpp
cpparas/src/debug/: Debug.cpp  DebugUI.cpp
cpparas/src/util/: Debug.cpp  GenericStateMachine.cpp  ImageArea.cpp  ImageUtils.cpp  Preferences.cpp  StateMachineWidget.cpp  StateStep.cpp
cpparas/tests/: CoordinateMatrix_test.cpp  ImageUtils_test.cpp  LSFParser_test.cpp  MarkerDetector_test.cpp  main.cpp
lsfm/: LegoSeqFileMaker.py
lsfm/appJar/examples/: showcase.py
paras/: PWorkspace.code-workspace  analyze.py  camera.py  constants.py  coordinates.py  lsfparser.py  main.py  projection.py  recognise.py  statemachine.py  util.py
snippets/: ActivityDiagram.plantuml  ActivityDiagram_old.plantuml  ComponentDiagram.drawio  ComponentDiagram_new.drawio  HoughCirclesTest.txt  LegoSequenceFile.lsf  New activity diagram.drawio  State Diagram.plantuml  UCD.plantuml  pre-commit-hook
snippets/3D models/: 6x6 for aruco.stl  6x6 for harris.stl  arm mount bracket v2.stl  front panel.stl  pi mount.stl  projector mount v2.stl
snippets/presentation/: presentation.md
snippets/research_colour/: main.py  recognise.py
snippets/technical_realisation_document/: VisionDiagram.plantuml
src/: analyze.py  camera.py  constants.py  coordinates.py  locator.py  lsfparser.py  main.py  projection.py  projecttion.py  recognise.py  statemachine.py  util.py  vscodeargs.py
testsetups/building1/: LegoSequenceFile.lsf
